Feat: Card Details e filters.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
     --secondary: #16cf92;
     --text: #000000;
     --card: #ffffff;
-    --hover: #f1f1f1;
+    --hover: #e2e2e2;
     --border: #bdbdbd;
     --destructive: 0 72.2% 50.6%;
     --destructive-foreground: 0 85.7% 97.3%;
@@ -26,7 +26,7 @@
     --secondary: #16cf92;
     --text: #F8FAFC;
     --card: #2D3748;
-    --hover: #1e2f41;
+    --hover: #a4aab1;
     --border: #50555e;
     --medium-gray:#64748B;
     --dark-gray: #0F172A;
